Connect FraudMicroService to postgres db
Add FraudCheckHistory entity
Add `springboot data jpa` dep and postgresql
Add postgreSql connection to yml

--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   application:
     name: customer
   datasource:
-    username: 'postgres'
-    password: 'postgres'
+    username: postgres
+    password: postgres
     url: jdbc:postgresql://localhost:5441/customer
   jpa:
     hibernate:
