--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,22 @@ services:
       - postgres
     restart: unless-stopped
 
+# to use database from another postgres container
+#  postgres-fraud:
+#    container_name: postgres
+#    image: postgres
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#      PGDATA: /data/postgres
+#    volumes:
+#      - postgres:/data/postgres
+#    ports:
+#      - "5441:5432"
+#    networks:
+#      - postgres
+#    restart: unless-stopped
+
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
