--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>customer</module>
 		<module>fraud</module>
+		<module>eureka-server</module>
 	</modules>
 
 	<name>amigosservices</name>
@@ -22,6 +23,7 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<spring.boot.maven.plugin.version>2.6.2</spring.boot.maven.plugin.version>
 		<spring.boot.dependencies.version>2.6.2</spring.boot.dependencies.version>
+		<spring.cloud.version>2021.0.0</spring.cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -29,7 +31,14 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.6.2</version>
+				<version>${spring.boot.dependencies.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring.cloud.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
