--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
         format_sql: true
     show-sql: true
     open-in-view: true
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
