Add rabbitMq service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,15 @@ services:
     ports:
       - "9411:9411"
 
+  rabbitmq:
+    image: rabbitmq:3.9.11-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      # management port, use web ui, console
+      # login-pass: guest
+      - "15672:15672"
+
 networks:
   postgres:
     driver: bridge
