--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
   zipkin:
     base-url: http://localhost:9411
   rabbitmq:
+#    addresses: amqp://guest@127.0.0.1:5672 true address we can see in logs
     addresses: localhost:5672
 
 eureka:
