--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -11,6 +11,15 @@
 	<packaging>jar</packaging>
 	<artifactId>fraud</artifactId>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
