--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<spring.boot.maven.plugin.version>2.6.2</spring.boot.maven.plugin.version>
 		<spring.boot.dependencies.version>2.6.2</spring.boot.dependencies.version>
 		<spring.cloud.version>2021.0.0</spring.cloud.version>
+		<image>345etedfgdfg/${project.artifactId}:${project.version}</image>
 	</properties>
 
 	<dependencyManagement>
@@ -79,8 +80,52 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+					<groupId>com.google.cloud.tools</groupId>
+					<artifactId>jib-maven-plugin</artifactId>
+					<version>3.2.0</version>
+					<configuration>
+						<from>
+							<image>eclipse-temurin:17</image>
+							<platforms>
+								<platform>
+									<architecture>arm64</architecture>
+									<os>linux</os>
+								</platform>
+								<platform>
+									<architecture>amd64</architecture>
+									<os>linux</os>
+								</platform>
+							</platforms>
+						</from>
+						<to>
+							<tags>
+								<tag>latest</tag>
+							</tags>
+						</to>
+					</configuration>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>build</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
