--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     container_name: zipkin
     ports:
       - "9411:9411"
+    networks:
+      - spring
 
   rabbitmq:
     image: rabbitmq:3.9.11-management-alpine
@@ -65,6 +67,11 @@ services:
     container_name: eureka-server
     ports:
       - "8761:8761"
+    environment:
+      #      - application-{name}.yml
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
     depends_on:
       - zipkin
 
@@ -73,12 +80,19 @@ services:
     container_name: api-gateway
     ports:
       - "8083:8083"
+    environment:
+#      - application-{name}.yml
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
     depends_on:
       - zipkin
       - eureka-server
 
 networks:
   postgres:
+    driver: bridge
+  spring:
     driver: bridge
 
 volumes:
